# DUANJU

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  channel7-backup-before-proxy-20260428-1830.txt  index.html  package-lock.json  package-windows.bat  package.json  tailwind.config.js  tmp-qwen-request.json  tmp-qwen-requests-warmup.jsonl  tmp-qwen-requests.jsonl  tmp_grsai_gpt_image.html  vite.config.ts
docs/: API_FIX_REPORT.md  (+2 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/dev-tools/: media_recover.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh  installer-template.nsi
src-tauri/resources/dreamina-cli/: .dreamina-cli-manifest.json  .gitignore  README.md
src-tauri/resources/ffmpeg/: .ffmpeg-manifest.json  .gitignore  README.md
src-tauri/resources/portable-git/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: error.rs  mod.rs
src-tauri/src/ai/providers/: mod.rs
src-tauri/src/ai/providers/alibaba/: mod.rs  models.rs  registry.rs
src-tauri/src/ai/providers/api2ok/: mod.rs
src-tauri/src/ai/providers/azemm/: mod.rs
src-tauri/src/ai/providers/bltcy/: mod.rs
src-tauri/src/ai/providers/coding/: mod.rs  registry.rs
src-tauri/src/ai/providers/comfly/: mod.rs
src-tauri/src/ai/providers/compatible/: mod.rs
src-tauri/src/ai/providers/deepseek/: mod.rs
src-tauri/src/ai/providers/fal/: mod.rs
src-tauri/src/ai/providers/grsai/: mod.rs
src-tauri/src/ai/providers/kie/: mod.rs
src-tauri/src/ai/providers/newapi/: mod.rs
src-tauri/src/ai/providers/oopii/: mod.rs
src-tauri/src/ai/providers/ppio/: adapter.rs  mod.rs  registry.rs
src-tauri/src/commands/: ad_skill_package.rs  ai.rs  asset_state.rs  clip_library.rs  director_stage.rs  dreamina_cli.rs  error_log.rs  export.rs  extensions.rs  generation_history.rs  gpt_best_video.rs  image.rs  jimeng_chrome.rs  jimeng_panel.rs  jimeng_panel_bridge.js  jimeng_video_queue.rs  media_audio.rs  midjourney.rs  mod.rs  project_state.rs  project_window_sessions.rs  ps_server.rs  script_project_package.rs  seedance.rs  storage.rs  style_preset_package.rs  system.rs  text_gen.rs  update.rs  vidu.rs
(+833 files in other folders)
