[package]
name = "storyboard-copilot"
version = "2.3.10"
autobins = false
default-run = "storyboard-copilot"
description = "OOpii无限画布 - AI 驱动的无限画布分镜创作工具"
authors = ["you"]
edition = "2021"

[lib]
name = "storyboard_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "storyboard-copilot"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = { path = "vendor/tauri-plugin-process" }
tauri-plugin-updater = { path = "vendor/tauri-plugin-updater", default-features = false, features = ["native-tls", "zip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
directories = "6"
async-trait = "0.1"
automod = "1.0"
inventory = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
md5 = "0.7"
arboard = "3.4"
fast_image_resize = "6.0.0"
imageproc = "0.26.1"
ab_glyph = "0.2.32"
png = "0.17"
urlencoding = "2"
warp = "0.3"
lazy_static = "1.4"

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 2

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61.2"

[patch.crates-io]
fastrand = { path = "vendor/crates/fastrand-2.1.1" }
minisign-verify = { path = "vendor/crates/minisign-verify-0.2.4" }
tempfile = { path = "vendor/crates/tempfile-3.20.0" }
